--- a/css/srd.css
+++ b/css/srd.css
@@ -5,12 +5,11 @@
 #page_header h1 a:hover{background:#ff1e00;}
 #page_header nav{border:0;margin:0;padding:0;width:820px;padding-left:20px;float:left;background:#5d504f;}#page_header nav .menu{margin:0;padding:0;}
 #page_header nav .menu ul{float:left;list-style:none;margin:0;padding:0;display:block;width:820px;}#page_header nav .menu ul ul{display:none;}
-#page_header nav .menu ul li:before{content:'';}
 #page_header nav .menu ul li{float:left;margin-right:20px;background:none;padding:0;}#page_header nav .menu ul li a{display:block;text-decoration:none;font-weight:bold;height:15px;color:#fefafa;font-size:11px;padding-top:0px;width:44px;padding:0 3px;}
 #page_header nav .menu ul li a:hover{color:#fefafa;background:#3d302f;}
 #page_header nav .menu ul li.last{margin-right:0;}
 #page_header nav #menu-item-217{position:relative;float:right;background:#ff1e00;margin-right:0;}#page_header nav #menu-item-217 a{display:block;color:#fefafa !important;text-decoration:none;font-weight:bold;font-size:11px;width:184px;}
-#page_header nav #follow_list{background:rgba(255, 30, 0, 0.8);position:absolute;z-index:999999;right:0;height:0;top:15px;overflow:hidden;}
+#page_header nav #follow_list{background:rgba(255, 30, 0, 0.8);position:absolute;z-index:999999;right:0;height:0;top:15px;overflow:hidden;}#page_header nav #follow_list ul{display:block;}
 #page_header nav #follow_list.expanded{height:150px;}
 #page_header nav #work_pullout{height:0;width:960px !important;position:absolute;display:block;background:rgba(93, 80, 79, 0.95);top:15px;left:-20px;padding:20px;padding-top:20px;padding-bottom:17px;display:none;color:#fefafa;overflow:hidden;z-index:999999;}#page_header nav #work_pullout a{width:auto;padding:0;display:inline;font-size:inherit;font-weight:inherit;text-decoration:underline;}
 #page_header nav #work_pullout a:hover{background:none;}
