--- a/less/archive.less
+++ b/less/archive.less
@@ -1,5 +1,20 @@
 @import "variables";
 
-#content.results {
-	
+#content.archive {
+	header {
+		margin-bottom:@row-height*2;
+	}
+	article {
+		header {
+			h1 {
+				font-size:22px;
+			}
+		}
+	}
+	.post {
+		margin-bottom:@row-height*2;
+	}
+	.post:last-child {
+		margin-bottom:@row-height;
+	}
 }
