--- a/less/forms.less
+++ b/less/forms.less
@@ -2,9 +2,9 @@
 
 input[type=text], textarea {
 	font-size: 12px;
-	border: 1px solid #5d504f;
+	border: 1px solid @color_midtone;
 	font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
-	color: #5d504f;
+	color: @color_midtone;
 }
 
 input[type=submit] {
