--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -28,31 +28,9 @@
 }
 #sidebar:hover {
 	.opacity(1);
-	width:420px;
+	.columns(6);
 	height:100%;
 	background: rgba(254,250,250,.94);
 	border-left:1px solid @color_midtone;
 }
 
-#wp-calendar {
-	margin-top:0;
-	margin-bottom:0;
-	th, td {
-		padding: 0 8px;
-	}
-	th:first-child, td:first-child {
-		padding-left:0;
-	}
-	th.last, td.last {
-		padding-right:0;
-	}
-	caption {
-		font-style:italic;
-		font-size:11px;
-		padding:0;
-		padding-top:1px;
-	}
-	#today {
-		font-weight:bold;
-	}
-}
