--- a/css/global.css
+++ b/css/global.css
@@ -12,16 +12,17 @@ body{font-size:62.5%;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;bac
 #page_heel{background:#050000;}
 a{color:#5d504f;text-decoration:underline;}a img{border:none;}
 a.external{text-decoration:none;border-bottom:1px dotted #5d504f;}
-a:hover{color:#7f7271;}
-a.external:hover{text-decoration:none;border-bottom:1px dotted #7f7271;}
+a:hover{color:#3d302f;}
+a.external:hover{text-decoration:none;border-bottom:1px dotted #3d302f;}
 h1,h2,h3,h4,h5,h6{margin:10px 0 15px 0;line-height:30px;}
 h1:first-child,h2:first-child,h3:first-child,h4:first-child,h5:first-child,h6:first-child{margin-top:0;}
-h1{font-size:24px;padding-top:6px;margin-bottom:15px;}
+h1{font-size:28px;padding-top:6px;margin-bottom:15px;}
 h2{font-size:21px;padding-top:0px;margin-bottom:15px;}
 h3{font-size:18px;padding-top:0px;margin-bottom:15px;}
 h4{font-size:16px;padding-top:0px;margin-bottom:15px;}
 h5{font-size:14px;padding-top:0px;margin-bottom:15px;}
 h6{font-size:12px;padding-top:0px;margin:15px 0;}
+header h2{font-size:13px;}
 blockquote{margin:15px 0px;padding:0;font-size:17px;line-height:30px;color:#5d504f;}blockquote blockquote{margin-top:0;}
 blockquote p{font-size:17px !important;line-height:30px !important;}
 blockquote cite{font-size:12px;}
@@ -49,14 +50,15 @@ hr{height:1px;border:0;margin:15px 0;padding:0;background-color:#b5aaa9;}
 .alignright{float:right !important;}
 .wp-caption{text-align:center;}.wp-caption img{margin:0;padding:0;border:0 none;}
 .wp-caption p.wp-caption-text{font-size:11px;padding:5px 4px 0 0;margin:15px;}
-.pagination{background-color:rgba(255, 0, 255, 0);}
 #content{margin:10px 0 30px 0;position:relative;}
 .post header{margin-bottom:10px;}.post header h1 a,.post header h2 a,.post header h3 a{text-decoration:none;}
-.post .callout{background-color:rgba(255, 0, 255, 0);}
 .post p .callout{padding-top:0;}
-.post ul.metadata{margin:0;padding:0;padding-top:5px;list-style:none;}.post ul.metadata li{margin:0;padding:0;float:left;background:none;margin-right:20px;}
-.post ul.metadata li.last{margin-right:0;}
-#foutohfour_title{margin-top:0;margin-bottom:20px;font-size:80px;padding-top:0;line-height:60px;}
+.post .metadata{margin:0;padding:0;list-style:none;}.post .metadata li{margin:0;padding:0;float:left;background:none;margin-right:20px;}
+.post .metadata li.last{margin-right:0;}
+#content.single article header,#content.page article header,#content.archive article header{margin-bottom:15px;}#content.single article header h1,#content.page article header h1,#content.archive article header h1{font-size:28px;line-height:30px;margin-top:-6px;padding-bottom:0;margin-bottom:0;}#content.single article header h1 .iconic,#content.page article header h1 .iconic,#content.archive article header h1 .iconic{color:#5d504f;padding-right:15px;}
+#content.single article header h2,#content.page article header h2,#content.archive article header h2{font-size:11px;}
+#content.single article section,#content.page article section,#content.archive article section{margin-bottom:15px;}#content.single article section p,#content.page article section p,#content.archive article section p{font-size:17px;font-family:serif;line-height:30px;}
+.pagination{margin:15px 0;}
 ::selection{background:#5d504f none repeat;color:#fefafa;}
 ::-moz-selection{background:#5d504f none;color:#fefafa;}
 .time.iconic time,.comments.iconic a{font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;padding-left:5px;}
