--- a/less/comments.less
+++ b/less/comments.less
@@ -2,17 +2,7 @@
 
 #comments_container
 {
-	margin-top:(@row-height*3);
-	h2 {
-		font-size:22px !important;
-		margin-bottom:0;
-	}
-	h3 {
-		font-size:14px !important;
-		margin-top:0;
-		font-style:italic;
-	}
-	
+	margin-top:(@row-height*3);	
 	#comments_ajax	{
 		overflow:hidden;
 		height:0;
@@ -38,32 +28,17 @@
 			margin-bottom:(@row-height);
 		}
 		.metadata {
-			overflow:hidden;
-			h4 {
-				font-size: 14px;
-				margin: 0;
-				padding-top: 4px;
-			}
-			h5 {
-				font-size: 11px;
-				padding-top: 1px;
-				margin: 0;
-			}
 			small {
 				font-size: 11px;
 				padding-top: 5px;
 				margin-bottom: 0;
 			}
 		}
-		.gravatar img {
-			margin-top:9px;
-			background: url(images/placeholder_50x50.gif) no-repeat;
-		}
 		li {
 			background: none;
-			margin: (@row-height*2) 0;
-			padding: 0 0 14px 0;
-			border-bottom: 1px solid #b5aaa9;
+			margin: 0;
+			padding: @row-height*2 0;
+			border-bottom: 1px solid @color_light;
 		}
 		li:first-child {
 			margin-top: 0px;
@@ -81,34 +56,24 @@
 		line-height: (@row-height*2);
 		padding-top: 10px;
 		margin-bottom: (@row-height*2);
-		color: #5d504f;
+		color: @color_midtone;
 	}
 	#commentform {
 		dl { 
 			position:relative !important;
-			padding-top: 0; 
-			margin-top: 0;
+			.reset-dimensions;
 			dt {
 				margin-top: (@row-height);
 				padding: 0;
-				label { 
-					position:absolute !important; 
-					left:4px !important; 
-					margin: 0 !important; 
-					padding: 0; 
-				}
+				margin-bottom:5px;
 			}
 			dt:first-child {
-				margin: 0;
+				margin-top: 0;
 			}
 			dd {
-				margin: 0;
-				padding: 0;
-				margin-top: -1px;
-				line-height: 1;
+				.reset-dimensions;
 				input.textinput {
 					margin: 0;
-					line-height: 1.2;
 					font-size: 12px !important;
 					padding: 2px;
 					height: (@row-height);
@@ -120,21 +85,19 @@
 			border: 1px solid #000;
 			margin: 0;
 			font-size: 12px !important;
-			line-height: 1.2 !important;
-			height: 95px;
+			height: 127px;
 			padding: 2px 4px;
 			width: 530px;
 			.loggedin {
 				width: 740px;
 			}
 		}
-		
 	}
 	#comment_form {
-		margin-top:20px;
+		margin-top: @row-height;
 		p.loggedin {
 			font-size: 12px !important;
-			margin-bottom: 15px;
+			margin-bottom: @row-height;
 		}
 	}
 }
