--- a/less/srd.less
+++ b/less/srd.less
@@ -39,10 +39,6 @@
 			ul {
 				display:none;
 			}
-
-			li:before {
-				content:'';
-			}
 			li {
 				float: left;
 				margin-right: 20px;
@@ -90,6 +86,9 @@
 			height:0;
 			top:@row-height;
 			overflow:hidden;
+			ul {
+				display:block;
+			}
 			a {
 
 			}
