Refinements, minor tweaks to functionality.

--- a/css/archive.css
+++ b/css/archive.css
@@ -1,7 +1,8 @@
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
-#content.archive header{margin-bottom:30px;}
+#content.archive header{margin-bottom:30px;}#content.archive header h1{margin-bottom:0;}
+#content.archive header h2{margin-top:0;color:#5d504f;}
 #content.archive article header h1{font-size:22px;}
-#content.archive .post{margin-bottom:30px;}
+#content.archive .post{margin-bottom:60px;}
 #content.archive .post:last-child{margin-bottom:15px;}
