--- a/less/footer.less
+++ b/less/footer.less
@@ -3,10 +3,16 @@
 #page_footer 
 {
 	padding-top: (@row-height*2);
-	padding-bottom: (@row-height*4);
+	padding-bottom: (@row-height*2);
 	color: #f0eceb;
 	a { color: #fefafa; }
-	h3 { color: #f0eceb; }
+	h3 { 
+		font-weight:bold;
+		font-size:13px;
+		margin-bottom:5px;
+		line-height:@row-height;
+		color: #f0eceb; 
+	}
 	.recent_comments dd {
 		font-size: 11px; 
 	}
