--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -16,8 +16,9 @@
 		float: right;
 	}
 	h3 {
-		margin-bottom: 0;
-		padding-bottom: 3px;
+		font-weight:bold;
+		font-size:13px;
+		margin-bottom:5px;
 	}
 	h3:first-child {
 		margin-top: 0 !important;
@@ -29,6 +30,7 @@
 #sidebar:hover {
 	.opacity(1);
 	.columns(6);
+	padding-left:20px;
 	height:100%;
 	background: rgba(254,250,250,.94);
 	border-left:1px solid @color_midtone;
