--- a/less/variables.less
+++ b/less/variables.less
@@ -6,8 +6,18 @@
 @color_off_black: 	#050000;
 
 
-@sans:'Helvetica Neue',Helvetica,Arial,sans-serif;
-@serif:serif;
+@sans:'ff-dagny-web-pro-1','ff-dagny-web-pro-2',sans-serif;
+@serif:'adobe-garamond-pro-1','adobe-garamond-pro-2', serif;
+
+@thin:100;
+@extra-light:200;
+@light:300;
+@normal:400;
+@medium:500;
+@demi-bold:600;
+@bold:700;
+@heavy:800;
+@black:900;
 
 @row-height:		15px;
 @column-width:		50px;
