--- a/css/global.css
+++ b/css/global.css
@@ -1,13 +1,14 @@
 -webkit-font-smoothing:antialiased;.reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
+#ad{margin-top:5px;}
 img{-ms-interpolation-mode:bicubic;}
 p img:first-child{margin-top:-5px;margin-bottom:5px;}
 table{border-collapse:separate;border-spacing:0;font-size:12px;margin:20px 0;}
 table,td,th{vertical-align:middle;}
 th,td{text-align:left;font-weight:normal;padding:0 5px;}
 th{border-bottom:1px solid;font-weight:bold;}
-body{font-size:62.5%;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;background-color:#fefafa;color:#050000;height:100%;margin:0;padding:0;line-height:15px;}
+body{font-size:62.5%;font-family:'ff-dagny-web-pro-1','ff-dagny-web-pro-2',sans-serif;background-color:#fefafa;color:#050000;height:100%;margin:0;padding:0;line-height:15px;}
 #page_bottom{background:#5d504f;}
 #page_heel{background:#050000;}
 a{color:#5d504f;text-decoration:underline;}a img{border:none;}
@@ -36,8 +37,8 @@ p:first-child{margin-top:0;}
 p:last-child{margin-bottom:0;}
 pre,code,tt{font:10px 'andale mono','monotype.com','lucida console',monospace;line-height:15px;}
 em{font-style:italic;}
-ul,ol{padding-top:5px;}ul ul,ol ul,ul ol,ol ol{margin:0;padding-top:0;}
-ul li,ol li{margin:0;font-size:12px;}
+ul,ol{list-style:square;margin-left:15px;padding-top:5px;}ul ul,ol ul,ul ol,ol ol{padding-top:0;}
+ul li,ol li{margin:0;font-size:12px;margin-bottom:5px;}
 ol{list-style:decimal;}ol li{margin-left:20px;}
 dl{margin:15px 0;padding-top:5px;}dl dt,dl dd{font-size:12px;}
 dl dt{font-weight:bold;margin-top:15px;}
@@ -53,12 +54,12 @@ hr{height:1px;border:0;margin:15px 0;padding:0;background-color:#b5aaa9;}
 #content{margin:10px 0 30px 0;position:relative;}
 .post header{margin-bottom:10px;}.post header h1 a,.post header h2 a,.post header h3 a{text-decoration:none;}
 .post p .callout{padding-top:0;}
-.post .metadata{margin:0;padding:0;list-style:none;}.post .metadata li{margin:0;padding:0;float:left;background:none;margin-right:20px;}
+.post .metadata{margin:0;padding:0;margin-top:15px;color:#5d504f;list-style:none;}.post .metadata li{margin:0;padding:0;float:left;background:none;margin-right:20px;}
 .post .metadata li.last{margin-right:0;}
 #content.single article header,#content.page article header,#content.archive article header{margin-bottom:15px;}#content.single article header h1,#content.page article header h1,#content.archive article header h1{font-size:28px;line-height:30px;margin-top:-6px;padding-bottom:0;margin-bottom:0;}#content.single article header h1 .iconic,#content.page article header h1 .iconic,#content.archive article header h1 .iconic{color:#5d504f;padding-right:15px;}
-#content.single article header h2,#content.page article header h2,#content.archive article header h2{font-size:11px;}
-#content.single article section,#content.page article section,#content.archive article section{margin-bottom:15px;}#content.single article section p,#content.page article section p,#content.archive article section p{font-size:17px;font-family:serif;line-height:30px;}
+#content.single article header h2,#content.page article header h2,#content.archive article header h2{margin-top:0;font-size:11px;}
+#content.single article section,#content.page article section,#content.archive article section{margin-bottom:15px;}#content.single article section p,#content.page article section p,#content.archive article section p{font-size:17px;font-family:'adobe-garamond-pro-1','adobe-garamond-pro-2',serif;line-height:30px;}
 .pagination{margin:15px 0;}
 ::selection{background:#5d504f none repeat;color:#fefafa;}
 ::-moz-selection{background:#5d504f none;color:#fefafa;}
-.time.iconic time,.comments.iconic a{font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;padding-left:5px;}
+.time.iconic time,.comments.iconic a{font-family:'ff-dagny-web-pro-1','ff-dagny-web-pro-2',sans-serif;padding-left:5px;}
