--- a/css/header.css
+++ b/css/header.css
@@ -5,11 +5,10 @@
 #page_header hgroup{margin-top:0px;}
 #page_header nav{display:block;padding-bottom:5px;border-bottom:1px dotted #5d504f;margin-bottom:5px;}#page_header nav .menu ul{float:left;list-style:none;margin:0;padding:0;display:block;}#page_header nav .menu ul ul{display:none;}
 #page_header nav .menu ul li:before{content:'';}
-#page_header nav .menu ul li{float:left;margin-right:30px;background:none;padding:0;}#page_header nav .menu ul li a{display:block;text-decoration:none;height:15px;color:#050000;font-size:11px;padding-top:0;}
+#page_header nav .menu ul li{margin:0;padding:0;float:left;margin-right:30px;background:none;}#page_header nav .menu ul li a{display:block;text-decoration:none;height:15px;color:#050000;font-size:11px;padding-top:0;}
 #page_header nav .menu ul li a:hover{color:#5d504f;}
 #page_header nav .menu ul li.last{margin-right:0;}
-#page_header nav #follow{position:absolute;right:0;}#page_header nav #follow #follow_header{background:#ff1e00;padding-left:4px;display:block;color:#fefafa !important;text-decoration:none;font-weight:bold;font-size:11px;}
-#sub_header p{font-size:12px;color:#5d504f;line-height:15px;margin-top:0;}
+#sub_header{border-bottom:1px dotted #5d504f;}#sub_header p{font-size:12px;color:#5d504f;line-height:15px;margin-top:0;}
 #sub_header .widget{float:left;margin-right:20px;width:190px;margin-bottom:15px;}
 #sub_header .widget:nth-child(4n+1){width:330px;clear:left;}
 #sub_header .widget:nth-child(4n){margin-right:0;}
