--- a/css/iconic.css
+++ b/css/iconic.css
@@ -2,8 +2,9 @@
   font-family: 'IconicStroke';
     src: url("../fonts/iconic_stroke.eot");
     src: local('IconicStroke'),
-       url("../fonts/iconic_stroke.svg#iconic") format('svg'),
-	   url("../fonts/iconic_stroke.otf") format('opentype');
+	   url("../fonts/iconic_stroke.ttf") format('truetype'),
+       url("../fonts/iconic_stroke.svg#iconic") format('svg');
+	   
 }
 
 .iconic {
