--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -2,7 +2,7 @@
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
 #sidebar{opacity:0.5;position:absolute;right:0px;top:0px;overflow:hidden;height:auto;border-left:1px solid #fefafa;border-right:0;z-index:100;}#sidebar .container{position:relative;left:0;float:right;}
-#sidebar h3{margin-bottom:0;padding-bottom:3px;}
+#sidebar h3{font-weight:bold;font-size:13px;margin-bottom:5px;}
 #sidebar h3:first-child{margin-top:0 !important;}
 #sidebar .container{padding-top:15px;}
-#sidebar:hover{opacity:1;width:400px;height:100%;background:rgba(254, 250, 250, 0.94);border-left:1px solid #5d504f;}
+#sidebar:hover{opacity:1;width:400px;padding-left:20px;height:100%;background:rgba(254, 250, 250, 0.94);border-left:1px solid #5d504f;}
