--- a/css/srd.css
+++ b/css/srd.css
@@ -8,9 +8,10 @@
 #page_header nav .menu ul li{float:left;margin-right:20px;background:none;padding:0;}#page_header nav .menu ul li a{display:block;text-decoration:none;font-weight:bold;height:15px;color:#fefafa;font-size:11px;padding-top:0px;width:44px;padding:0 3px;}
 #page_header nav .menu ul li a:hover{color:#fefafa;background:#3d302f;}
 #page_header nav .menu ul li.last{margin-right:0;}
-#page_header nav #menu-item-217{position:relative;float:right;background:#ff1e00;margin-right:0;}#page_header nav #menu-item-217 a{display:block;color:#fefafa !important;text-decoration:none;font-weight:bold;font-size:11px;width:184px;}
-#page_header nav #follow_list{background:rgba(255, 30, 0, 0.8);position:absolute;z-index:999999;right:0;height:0;top:15px;overflow:hidden;}#page_header nav #follow_list ul{display:block;}
-#page_header nav #follow_list.expanded{height:150px;}
+#page_header nav #menu-item-217{position:relative;float:right;margin-right:0;}#page_header nav #menu-item-217 a{display:block;background:#ff1e00;color:#fefafa !important;text-decoration:none;font-weight:bold;font-size:11px;width:184px;}
+#page_header nav #follow_list{background:rgba(255, 30, 0, 0.8);position:absolute;z-index:999999;right:0;height:0;padding-left:20px;top:15px;overflow:hidden;}#page_header nav #follow_list ul{margin-top:15px;display:block;}#page_header nav #follow_list ul li{width:auto;margin:0;padding:0;display:block;float:none;margin-bottom:15px;}#page_header nav #follow_list ul li a{background:url(http://placehold.it/50x50) no-repeat;padding-left:70px;display:block;height:auto;width:auto;}#page_header nav #follow_list ul li a .header{font-size:22px;line-height:30px;font-weight:normal;}
+#page_header nav #follow_list ul li a .description{display:block;font-weight:400;}
+#page_header nav #follow_list.expanded{height:140px;}
 #page_header nav #work_pullout{height:0;width:960px !important;position:absolute;display:block;background:rgba(93, 80, 79, 0.95);top:15px;left:-20px;padding:20px;padding-top:20px;padding-bottom:17px;display:none;color:#fefafa;overflow:hidden;z-index:999999;}#page_header nav #work_pullout a{width:auto;padding:0;display:inline;font-size:inherit;font-weight:inherit;text-decoration:underline;}
 #page_header nav #work_pullout a:hover{background:none;}
 #page_header nav #work_pullout h4{padding-left:3px;font-size:15px;}
@@ -22,6 +23,7 @@
 #page_header nav #work_pullout li.showcase img{padding:3px;margin:-3px 0 -3px 0;}
 #page_header nav #work_pullout.expanded{height:300px;}
 #page_header nav nav .menu ul li{margin-right:20px !important;}#page_header nav nav .menu ul li a{width:46px;padding-left:4px;}
+#page_header #sub_header .widget{margin-bottom:0;}
 #page_footer #cat_navigation{text-indent:0;}#page_footer #cat_navigation a.head{display:block;font-weight:bold;margin:0px;padding:0px;text-indent:14px;text-decoration:none;}
 #page_footer #cat_navigation li{font-weight:bold;font-size:12px;list-style:none outside none;display:block !important;background:none;padding-left:0;}#page_footer #cat_navigation li a{outline-style:none;display:block;}
 #page_footer #cat_navigation li:first-child{padding-top:0;}
