--- a/less/archive.less
+++ b/less/archive.less
@@ -3,6 +3,13 @@
 #content.archive {
 	header {
 		margin-bottom:@row-height*2;
+		h1 {
+			margin-bottom:0;
+		}
+		h2 {
+			margin-top:0;
+			color:@color_midtone;
+		}
 	}
 	article {
 		header {
@@ -12,7 +19,7 @@
 		}
 	}
 	.post {
-		margin-bottom:@row-height*2;
+		margin-bottom:@row-height*4;
 	}
 	.post:last-child {
 		margin-bottom:@row-height;
