--- a/less/header.less
+++ b/less/header.less
@@ -32,10 +32,10 @@
 				content:'';
 			}
 			li {
+				.reset-dimensions;
 				float: left;
 				margin-right: 30px;
 				background: none;
-				padding: 0;
 				a {
 					display: block;
 					text-decoration: none;
@@ -52,24 +52,12 @@
 			li.last {
 				margin-right: 0;
 			}
-		}
-		#follow {
-			position:absolute;
-			right:0;
-			#follow_header {
-				background:#ff1e00;
-				padding-left:4px;
-				display:block;
-				color:#fefafa !important;
-				text-decoration: none;
-				font-weight: bold;
-				font-size: 11px;
-			}
 		}	
 	}
 }
 
 #sub_header {
+	border-bottom:1px dotted @color_midtone;
 	p {
 		font-size:12px;
 		color:@color_midtone;
