--- a/less/header.less
+++ b/less/header.less
@@ -57,9 +57,10 @@
 }
 
 #sub_header {
+	margin-top:5px;
 	border-bottom:1px dotted @color_midtone;
 	p {
-		font-size:12px;
+		font-size:11px;
 		color:@color_midtone;
 		line-height:@row-height;
 		margin-top:0;
