--- a/less/srd.less
+++ b/less/srd.less
@@ -212,6 +212,15 @@
 	}
 }
 
+#content.single {
+	#post_footer {
+		.widget {
+			margin-bottom:0;
+		}
+	}
+}
+
+
 #page_footer {
 	#cat_navigation {
 		text-indent: 0;
