--- a/less/widgets.less
+++ b/less/widgets.less
@@ -1,5 +1,15 @@
 @import "variables";
 
+/*Sub-header intro text*/
+#sub_header #text-3 {
+	p {
+		font-size:12px;
+		line-height:15px;
+	}
+	
+}
+
+
 #wp-calendar {
 	margin-top:0;
 	margin-bottom:0;
