--- a/less/index.less
+++ b/less/index.less
@@ -14,6 +14,12 @@
 			line-height:@row-height;
 			font-style:italic;
 			.reset-dimensions;
+			font-family:@serif;
+		}
+		.more {
+			display:block;
+			margin-top:@row-height;
+			font-weight:@bold;
 		}
 	}
 	
@@ -47,15 +53,14 @@
 			}
 		}
 		.post {
+			margin-top:5px;
 			position:relative;
 			float:left;
 			margin-right:@gutter-width;
 			header {
 				.reset-dimensions;
-				margin-bottom:5px;
 				h1 {
 					.reset-dimensions;
-					margin-top:10px;
 					font-size: 13px;
 					line-height:(@row-height*2);
 					font-weight:bold;
@@ -63,9 +68,12 @@
 				}
 			}
 			.metadata { .opacity(0); }
-			section p {
-				font-size: 11px;
-				padding-bottom:0;
+			section  {
+				margin-top:5px;
+				p {
+					font-size: 11px;
+					padding-bottom:0;
+				}
 			}
 		}
 		.post:nth-child(4n) { margin-right:0; }
