Small style changes

--- a/less/index.less
+++ b/less/index.less
@@ -46,7 +46,7 @@
 	}
 
 	#content_secondary, #content_tertiary {
-		margin-top:@row-height;
+		margin-top:@row-height*2;
 		.post.active {
 			.metadata {
 				.opacity(1);
