--- a/css/iconic.css
+++ b/css/iconic.css
@@ -1,10 +1,9 @@
 @font-face {
   font-family: 'IconicStroke';
-    src: url("../fonts/iconic_stroke.eot");
-    src: local('IconicStroke'),
-	   url("../fonts/iconic_stroke.ttf") format('truetype'),
-       url("../fonts/iconic_stroke.svg#iconic") format('svg');
-	   
+	src: url("../fonts/iconic_stroke.eot");
+	src: local('IconicStroke'),
+		url("../fonts/iconic_stroke.svg#iconic") format('svg'),
+		url("../fonts/iconic_stroke.otf") format('opentype');	   
 }
 
 .iconic {
