--- a/less/transitions.less
+++ b/less/transitions.less
@@ -4,6 +4,12 @@
 	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
 }
 
+#work_pullout {
+	-webkit-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
+}
+
 #sidebar {
 	-webkit-transition-property: width, border-left, opacity;
 	-webkit-transition-duration: .5s;
@@ -17,8 +23,20 @@
 	-webkit-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-moz-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-o-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	
+	.widget {
+		-webkit-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
+		-moz-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
+		-o-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0);
+	}
 }
 
 #comments_ajax {
 	-webkit-transition: all 1s cubic-bezier(0.02, 0, 0.18, 1.0); 
+}
+
+#search_form {
+	-webkit-transition: all .2s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: all .2s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: all .2s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
