--- a/css/index.css
+++ b/css/index.css
@@ -3,12 +3,13 @@
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
 #content.home .content-header .label,#content.home .content-header .caption{display:block;}
 #content.home .content-header .label{font-size:15px;margin:10px 0 9px 0;}
-#content.home .content-header .caption{font-size:11px;line-height:15px;font-style:italic;margin:0;padding:0;font-family:'adobe-garamond-pro-1','adobe-garamond-pro-2',serif;}
+#content.home .content-header .caption{font-size:11px;line-height:15px;font-style:italic;margin:0;padding:0;font-family:'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2',Georgia,"Times New Roman",Times,serif;}
 #content.home .content-header .more{display:block;margin-top:15px;font-weight:700;}
-#content.home #content_primary{margin-bottom:15px;}#content.home #content_primary .post header h1{font-size:19px;margin-bottom:0;}
-#content.home #content_primary .post section{margin:0 0 17px 0;}#content.home #content_primary .post section p{font-style:italic;font-size:38px !important;line-height:45px;padding-top:2px;padding-bottom:5px;}
-#content.home #content_secondary,#content.home #content_tertiary{margin-top:30px;}#content.home #content_secondary .post.active .metadata,#content.home #content_tertiary .post.active .metadata{opacity:1;}
+#content.home #content_primary,#content.home #content_secondary,#content.home #content_tertiary{margin-bottom:30px;}
+#content.home #content_primary .post header h1{margin:0;padding:0;font-size:19px;margin-top:3px;}
+#content.home #content_primary .post section{margin:0 0 17px 0;}#content.home #content_primary .post section p{font-family:'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2',Georgia,"Times New Roman",Times,serif;font-style:italic;font-size:38px !important;line-height:45px;padding:2px 0 5px 0;}
+#content.home #content_secondary .post.active .metadata,#content.home #content_tertiary .post.active .metadata{opacity:1;}
 #content.home #content_secondary .post,#content.home #content_tertiary .post{margin-top:5px;position:relative;float:left;margin-right:20px;}#content.home #content_secondary .post header,#content.home #content_tertiary .post header{margin:0;padding:0;}#content.home #content_secondary .post header h1,#content.home #content_tertiary .post header h1{margin:0;padding:0;font-size:13px;line-height:30px;font-weight:bold;}#content.home #content_secondary .post header h1 a,#content.home #content_tertiary .post header h1 a{text-decoration:none;}
 #content.home #content_secondary .post .metadata,#content.home #content_tertiary .post .metadata{opacity:0;}
-#content.home #content_secondary .post section,#content.home #content_tertiary .post section{margin-top:5px;}#content.home #content_secondary .post section p,#content.home #content_tertiary .post section p{font-size:11px;padding-bottom:0;}
+#content.home #content_secondary .post section,#content.home #content_tertiary .post section{margin-top:5px;font-family:'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2',Georgia,"Times New Roman",Times,serif;font-size:13px;}#content.home #content_secondary .post section p,#content.home #content_tertiary .post section p{padding-bottom:0;}
 #content.home #content_secondary .post:nth-child(4n),#content.home #content_tertiary .post:nth-child(4n){margin-right:0;}
