--- a/css/srd.css
+++ b/css/srd.css
@@ -11,17 +11,16 @@
 #page_header nav #menu-item-217{position:relative;float:right;margin-right:0;}#page_header nav #menu-item-217 a{display:block;background:#ff1e00;color:#fefafa !important;text-decoration:none;font-weight:bold;font-size:11px;width:184px;}
 #page_header nav #follow_list{background:rgba(255, 30, 0, 0.8);position:absolute;z-index:999999;right:0;height:0;padding-left:20px;top:15px;overflow:hidden;}#page_header nav #follow_list ul{margin-top:15px;display:block;}#page_header nav #follow_list ul li{width:auto;margin:0;padding:0;display:block;float:none;margin-bottom:15px;}#page_header nav #follow_list ul li a{background:url(http://placehold.it/50x50) no-repeat;padding-left:70px;display:block;height:auto;width:auto;}#page_header nav #follow_list ul li a .header{font-size:22px;line-height:30px;font-weight:normal;}
 #page_header nav #follow_list ul li a .description{display:block;font-weight:400;}
-#page_header nav #follow_list.expanded{height:140px;}
-#page_header nav #work_pullout{height:0;width:960px !important;position:absolute;display:block;background:rgba(93, 80, 79, 0.95);top:15px;left:-20px;padding:20px;padding-top:20px;padding-bottom:17px;display:none;color:#fefafa;overflow:hidden;z-index:999999;}#page_header nav #work_pullout a{width:auto;padding:0;display:inline;font-size:inherit;font-weight:inherit;text-decoration:underline;}
+#page_header nav #follow_list.expanded{height:150px;}
+#page_header nav #work_pullout{height:0;width:960px !important;position:absolute;background:rgba(93, 80, 79, 0.95);top:15px;left:-20px;padding:0 20px;display:block;color:#fefafa;overflow:hidden;z-index:999999;}#page_header nav #work_pullout a{width:auto;padding:0;display:inline;font-size:inherit;font-weight:inherit;text-decoration:underline;}
 #page_header nav #work_pullout a:hover{background:none;}
-#page_header nav #work_pullout h4{padding-left:3px;font-size:15px;}
-#page_header nav #work_pullout li{padding:0;margin-left:0;float:left;}
-#page_header nav #work_pullout li.intro h4{padding-left:24px;}
-#page_header nav #work_pullout li.intro .more{display:block;font-weight:bold;font-size:11px;padding-top:1px;}
-#page_header nav #work_pullout li.showcase a{text-decoration:none;}
-#page_header nav #work_pullout li.showcase h4{font-size:13px;background:rgba(93, 80, 79, 0.85);position:absolute;bottom:6px;left:3px;width:187px;margin:0;}
-#page_header nav #work_pullout li.showcase img{padding:3px;margin:-3px 0 -3px 0;}
-#page_header nav #work_pullout.expanded{height:300px;}
+#page_header nav #work_pullout li{padding:0;margin-left:0;margin-top:15px;float:left;}
+#page_header nav #work_pullout li.intro h4{margin-bottom:15px;}#page_header nav #work_pullout li.intro h4 .iconic{color:#ff1e00;}
+#page_header nav #work_pullout li.intro h4 a{text-decoration:none;}
+#page_header nav #work_pullout li.intro .more{display:block;font-weight:bold;font-size:11px;margin-top:15px;}
+#page_header nav #work_pullout li.showcase{position:relative;}#page_header nav #work_pullout li.showcase a{text-decoration:none;}
+#page_header nav #work_pullout li.showcase h4{margin:0;padding:0;font-size:13px;background:rgba(93, 80, 79, 0.85);position:absolute;bottom:4px;width:185px;padding-left:5px;}
+#page_header nav #work_pullout.expanded{height:150px;}
 #page_header nav nav .menu ul li{margin-right:20px !important;}#page_header nav nav .menu ul li a{width:46px;padding-left:4px;}
 #page_header #sub_header .widget{margin-bottom:0;}
 #content.single #post_footer .widget{margin-bottom:0;}
@@ -31,3 +30,5 @@
 #page_footer #cat_navigation ul{margin-top:0;padding-top:0;}
 #page_footer #cat_navigation li li{font-weight:normal;font-size:11px;padding-top:0;}#page_footer #cat_navigation li li a{display:block;padding-left:5px;}
 #page_footer #cat_navigation li li:first-child{margin:0;}
+#page_heel .widget{margin-bottom:1px;}
+#sticky_footer .widget{margin-bottom:0;}
