--- a/less/footer.less
+++ b/less/footer.less
@@ -4,14 +4,15 @@
 {
 	padding-top: (@row-height*2);
 	padding-bottom: (@row-height*2);
-	color: #f0eceb;
-	a { color: #fefafa; }
+	color: @color_light;
+	a { color: @color_highlight; }
 	h3 { 
 		font-weight:bold;
 		font-size:13px;
 		margin-bottom:5px;
 		line-height:@row-height;
-		color: #f0eceb; 
+		color: @color_light;
+		font-family:@sans-serif;
 	}
 	.recent_comments dd {
 		font-size: 11px; 
@@ -21,6 +22,7 @@
 		margin-right:20px;
 		width:190px;
 		margin-bottom:(@row-height*2);
+		font-family:@serif;
 	}
 
 	.widget:nth-child(4n+1) {
@@ -36,7 +38,36 @@
 #page_heel {
 	padding:(@row-height) 0;
 	color:@color_highlight;
-	padding-bottom:(@row-height*2);
+	p, ul, li, a { font-size:10px; }
+	a {
+		color:@color_highlight;
+	}
+	.widget {
+		float:left;
+		margin-right:20px;
+		width:190px;
+		margin-bottom:(@row-height*2);
+		color:@color_light;
+		h3 {
+			.reset-dimensions;
+			font-size:12px;
+			font-weight:bold;
+			line-height:@row-height;
+			margin-top:5px;
+		}
+		p {
+			.reset-dimensions;
+			margin:5px 0;
+		}
+	}
+	.widget:nth-child(4n+1) {
+		width:330px;
+		clear:left;
+	}
+
+	.widget:nth-child(4n) {
+		margin-right:0;
+	}
 } 
 
 /* @group Sticky Footer */
@@ -47,14 +78,41 @@
 	background-color: rgba(42,32,30,.75);
 	position: fixed;
 	overflow: hidden;
-	height:(@row-height*2);
 	bottom: 0;
 	z-index: 99999;
+	
+	.widget {
+		float:left;
+		margin-right:20px;
+		width:190px;
+		margin-bottom:(@row-height*2);
+		color:@color_light;
+		h3 {
+			.reset-dimensions;
+			font-size:12px;
+			font-weight:bold;
+			line-height:@row-height;
+			margin-top:5px;
+		}
+		p {
+			.reset-dimensions;
+			margin:5px 0;
+			font-size:11px;
+		}
+		
+	}
+	
+	.widget:nth-child(4n) {
+		margin-right:0;
+	}
 }
 
 #sticky_footer.light
 {
 	background-color: rgba(254,250,250,.75);
+	.widget {
+		color:@color_off_black;
+	}
 }
 
 /* @end */
