--- a/less/srd.less
+++ b/less/srd.less
@@ -120,22 +120,20 @@
 		}
 		
 		#follow_list.expanded {
-			height:140px;
+			height:150px;
 		}
 
 		#work_pullout {
 			height:0;
+			
 			width: 960px !important;
 			position: absolute;
-			display: block;
 			background: rgba(93,80,79,.95);
 			top: 15px;
 			left: -20px;
-			padding: 20px;
-			padding-top: 20px;
-			padding-bottom: 17px;
-			display:none;
-			color: #fefafa;
+			padding:0 20px;
+			display:block;
+			color: @color_highlight;
 			overflow:hidden;
 			z-index:999999;
 			a {
@@ -149,48 +147,51 @@
 			a:hover {
 				background: none;
 			}
-			h4 {
-				padding-left: 3px;
-				font-size: 15px;
-			}
 			li {
 				padding: 0;
 				margin-left: 0;
+				margin-top:15px;
 				float:left;
 			}
 			li.intro {
 				h4 {
-					padding-left: 24px;
+					margin-bottom:@row-height;
+					.iconic {
+						color:@color_accent;
+					}
+					a {
+						text-decoration:none;
+					}
 				}
 				.more {
 					display: block;
 					font-weight: bold;
 					font-size: 11px;
-					padding-top: 1px;
+					margin-top: @row-height;
 				}
 			}
 			li.showcase {
+				position:relative;
 				a {
 					text-decoration:none;
 				}
 				h4 {
+					.reset-dimensions;
 					font-size: 13px;
 					background: rgba(93,80,79,.85);
 					position: absolute;
-					bottom:6px;
-					left: 3px;
-					width: 187px;
-					margin: 0;
+					bottom:4px;
+					width: 185px;
+					padding-left:5px
 				}
 				img {
-					padding: 3px;
-					margin: -3px 0 -3px 0;
+					
 				}
 			}
 		}
 
 		#work_pullout.expanded {
-			height:300px;
+			height:150px;
 		}
 
 		nav {
@@ -263,5 +264,18 @@
 		li li:first-child {
 			margin: 0;
 		}
+	}
+}
+
+#page_heel {
+	.widget {
+		margin-bottom:1px;
+	}
+}
+
+#sticky_footer
+{
+	.widget {
+		margin-bottom:0;
 	}
 }
