--- a/less/variables.less
+++ b/less/variables.less
@@ -6,8 +6,9 @@
 @color_off_black: 	#050000;
 
 
-@sans:'ff-dagny-web-pro-1','ff-dagny-web-pro-2',sans-serif;
-@serif:'adobe-garamond-pro-1','adobe-garamond-pro-2', serif;
+@sans-serif:'ff-dagny-web-pro-1', 'ff-dagny-web-pro-2', 'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif;
+@sans-serif-alt:'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif;
+@serif:'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2', Georgia, "Times New Roman", Times, serif;
 
 @thin:100;
 @extra-light:200;
