--- a/less/widgets.less
+++ b/less/widgets.less
@@ -9,6 +9,18 @@
 	
 }
 
+/*Page heel navigation*/
+#page_heel #nav_menu-3 {
+	ul{
+		list-style:none;
+		margin-left:0;
+		li {
+			float:left;
+			margin-right:15px;
+		}
+	}
+}
+
 
 #wp-calendar {
 	margin-top:0;
