--- a/less/comments.less
+++ b/less/comments.less
@@ -2,7 +2,7 @@
 
 #comments_container
 {
-	border-top:1px dotted @color_midtone;
+	border-top:@border-break;
 	margin-top:(@row-height);
 	padding-top:@row-height;	
 	#comments_ajax	{
