--- a/less/header.less
+++ b/less/header.less
@@ -104,7 +104,7 @@
 
 #sub_header {
 	margin-top:5px;
-	border-bottom:3px double @color_light;
+	border-bottom:@border-break;
 	p {
 		font-size:11px;
 		color:@color_midtone;
