--- a/less/index.less
+++ b/less/index.less
@@ -83,9 +83,12 @@
 		}
 		.post:nth-child(4n) { margin-right:0; }
 	}
-	
-	#content_secondary {
 		
+	#content_secondary {
+		img {
+			.drop-shadow(0px, 2px, 7px, #9e8886);
+
+		}
 	}
 	
 	#content_tertiary {
