--- a/less/transitions.less
+++ b/less/transitions.less
@@ -35,6 +35,10 @@
 	-webkit-transition: all 1s cubic-bezier(0.02, 0, 0.18, 1.0); 
 }
 
+a{
+	-webkit-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+}
+
 #search_form {
 	-webkit-transition: all .2s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-moz-transition: all .2s cubic-bezier(0.02, 0, 0.18, 1.0); 
