--- a/css/global.css
+++ b/css/global.css
@@ -7,13 +7,13 @@ table{border-collapse:separate;border-spacing:0;font-size:12px;margin:20px 0;}
 table,td,th{vertical-align:middle;}
 th,td{text-align:left;font-weight:normal;padding:0 5px;}
 th{border-bottom:1px solid;font-weight:bold;}
-body{font-size:62.5%;font-family:'ff-dagny-web-pro-1','ff-dagny-web-pro-2','Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;background-color:#050000;color:#050000;height:100%;margin:0;padding:0;line-height:15px;padding-bottom:60px;}
+body{font-size:62.5%;font-family:'ff-dagny-web-pro-1','ff-dagny-web-pro-2','Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;background-color:#3d302f;color:#050000;height:100%;margin:0;padding:0;line-height:15px;padding-bottom:60px;}
 #page_top{background:#fefafa;}
 #page_bottom{background:#5d504f;}
-#page_heel{background:#050000;}
+#page_heel{background:#3d302f;}
 a{color:#5d504f;text-decoration:underline;}a img{border:none;}
 a.external{text-decoration:none;border-bottom:1px dotted #5d504f;}
-a:hover{color:#3d302f;}
+a:hover{color:#9e8886;}
 a.external:hover{text-decoration:none;border-bottom:1px dotted #3d302f;}
 h1,h2,h3,h4,h5,h6{margin:10px 0 15px 0;line-height:30px;}
 h1:first-child,h2:first-child,h3:first-child,h4:first-child,h5:first-child,h6:first-child{margin-top:0;}
