--- a/less/footer.less
+++ b/less/footer.less
@@ -74,6 +74,7 @@
 
 #sticky_footer
 {
+	.drop-shadow(0px, 5px, 20px, @color_off_black);
 	width: 100%;
 	background-color: rgba(42,32,30,.75);
 	position: fixed;
