--- a/less/global.less
+++ b/less/global.less
@@ -25,7 +25,7 @@ th { border-bottom: 1px solid; font-weight:bold; }
 body {
 	font-size: 62.5%;
 	font-family:@sans-serif;
-	background-color: @color_off_black;
+	background-color: @color_dark;
 	color: @color_off_black;
 	height: 100%;
 	.reset-dimensions;
@@ -42,7 +42,7 @@ body {
 }
 
 #page_heel {
-	background:@color_off_black;
+	background:@color_dark;
 }
 
 a {
@@ -51,7 +51,7 @@ a {
 	img { border: none; }
 }
 a.external { text-decoration: none; border-bottom: 1px dotted @color_midtone; }
-a:hover { color: @color_dark; }
+a:hover { color: #9e8886; }
 a.external:hover { text-decoration: none; border-bottom: 1px dotted @color_dark; }
 a:visited { }
 
