--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -36,3 +36,22 @@
 	border-left:1px solid @color_midtone;
 }
 
+#faux_sidebar {
+	.columns(3);
+	overflow:hidden;
+	visibility:hidden;
+	
+	h3 {
+		font-weight:bold;
+		font-size:13px;
+		margin-bottom:5px;
+	}
+	h3:first-child {
+		margin-top: 0 !important;
+	}
+	.container {
+		padding-top:@row-height;
+	}
+}
+
+
